crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_adds_missing_fallback_custom_mode.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
expression: pretty_tokens(&custom_mode)
---
#[derive(Clone, Copy, Debug, Eq, Hash, PartialEq)]
enum CustomLanguages {
    EnUs,
    Fr,
}
impl ::es_fluent::FluentMessage for CustomLanguages {
    fn to_fluent_string_with(
        &self,
        localize: &mut ::es_fluent::FluentMessageLookup<'_>,
    ) -> String {
        match self {
            Self::EnUs => {
                localize(
                    ::es_fluent::registry::__macro::static_message_key(
                        env!("CARGO_PKG_NAME"),
                        ::es_fluent::registry::StaticFluentDomain::from_package_name(
                            env!("CARGO_PKG_NAME"),
                        ),
                        ::es_fluent::registry::__macro::static_entry_id("en-US"),
                    ),
                    None,
                )
            }
            Self::Fr => {
                localize(
                    ::es_fluent::registry::__macro::static_message_key(
                        env!("CARGO_PKG_NAME"),
                        ::es_fluent::registry::StaticFluentDomain::from_package_name(
                            env!("CARGO_PKG_NAME"),
                        ),
                        ::es_fluent::registry::__macro::static_entry_id("fr"),
                    ),
                    None,
                )
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_language_inventory_custom_languages {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::__macro::ftl_variant(
            "EnUs",
            ::es_fluent::registry::__macro::static_entry_id("en-US"),
            &[],
            module_path!(),
            line!(),
        ),
        ::es_fluent::registry::__macro::ftl_variant(
            "Fr",
            ::es_fluent::registry::__macro::static_entry_id("fr"),
            &[],
            module_path!(),
            line!(),
        ),
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::__macro::ftl_type_info(
        ::es_fluent::meta::TypeKind::Enum,
        "CustomLanguages",
        VARIANTS,
        ::es_fluent::registry::__macro::ftl_scope(env!("CARGO_PKG_NAME"), None),
        file!(),
        module_path!(),
        None,
    );
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
impl From<CustomLanguages> for ::es_fluent::unic_langid::LanguageIdentifier {
    fn from(val: CustomLanguages) -> Self {
        match val {
            CustomLanguages::EnUs => ::es_fluent::unic_langid::langid!("en-US"),
            CustomLanguages::Fr => ::es_fluent::unic_langid::langid!("fr"),
        }
    }
}
impl From<&CustomLanguages> for ::es_fluent::unic_langid::LanguageIdentifier {
    fn from(val: &CustomLanguages) -> Self {
        match val {
            CustomLanguages::EnUs => ::es_fluent::unic_langid::langid!("en-US"),
            CustomLanguages::Fr => ::es_fluent::unic_langid::langid!("fr"),
        }
    }
}
#[derive(Debug)]
pub enum CustomLanguagesLanguageConversionError {
    InvalidLanguageIdentifier {
        input: String,
        source: ::es_fluent::unic_langid::LanguageIdentifierError,
    },
    UnsupportedLanguageIdentifier(::es_fluent::unic_langid::LanguageIdentifier),
}
impl ::std::fmt::Display for CustomLanguagesLanguageConversionError {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        match self {
            Self::InvalidLanguageIdentifier { input, source } => {
                write!(f, "invalid language identifier '{input}': {source}")
            }
            Self::UnsupportedLanguageIdentifier(lang) => {
                write!(f, "unsupported language identifier: {lang}")
            }
        }
    }
}
impl ::std::error::Error for CustomLanguagesLanguageConversionError {
    fn source(&self) -> Option<&(dyn ::std::error::Error + 'static)> {
        match self {
            Self::InvalidLanguageIdentifier { source, .. } => Some(source),
            Self::UnsupportedLanguageIdentifier(_) => None,
        }
    }
}
impl ::std::convert::TryFrom<&::es_fluent::unic_langid::LanguageIdentifier>
for CustomLanguages {
    type Error = CustomLanguagesLanguageConversionError;
    fn try_from(
        lang: &::es_fluent::unic_langid::LanguageIdentifier,
    ) -> Result<Self, Self::Error> {
        let lang_str = lang.to_string();
        match lang_str.as_str() {
            "en-US" => Ok(CustomLanguages::EnUs),
            "fr" => Ok(CustomLanguages::Fr),
            _ => {
                Err(
                    CustomLanguagesLanguageConversionError::UnsupportedLanguageIdentifier(
                        lang.clone(),
                    ),
                )
            }
        }
    }
}
impl ::std::convert::TryFrom<::es_fluent::unic_langid::LanguageIdentifier>
for CustomLanguages {
    type Error = CustomLanguagesLanguageConversionError;
    fn try_from(
        lang: ::es_fluent::unic_langid::LanguageIdentifier,
    ) -> Result<Self, Self::Error> {
        Self::try_from(&lang)
    }
}
impl ::std::str::FromStr for CustomLanguages {
    type Err = CustomLanguagesLanguageConversionError;
    fn from_str(s: &str) -> Result<Self, Self::Err> {
        let lang = s
            .parse::<::es_fluent::unic_langid::LanguageIdentifier>()
            .map_err(|source| {
                CustomLanguagesLanguageConversionError::InvalidLanguageIdentifier {
                    input: s.to_string(),
                    source,
                }
            })?;
        Self::try_from(&lang)
    }
}
impl Default for CustomLanguages {
    fn default() -> Self {
        CustomLanguages::EnUs
    }
}
