crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_adds_missing_fallback_default_mode.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
expression: pretty_tokens(&default_mode)
---
#[derive(Clone, Copy, Debug, Eq, Hash, PartialEq)]
enum Languages {
    EnUs,
    Fr,
}
#[cfg(target_arch = "wasm32")]
#[doc(hidden)]
#[used]
static __ES_FLUENT_LANG_FORCE_LINK_Languages: fn() -> usize = ::es_fluent_lang::force_link;
impl ::es_fluent::FluentMessage for Languages {
    fn to_fluent_string_with(
        &self,
        localize: &mut ::es_fluent::FluentMessageLookup<'_>,
    ) -> String {
        match self {
            Self::EnUs => {
                localize(
                    ::es_fluent::registry::__macro::static_message_key(
                        "es-fluent-lang",
                        ::es_fluent::registry::__macro::static_domain("es-fluent-lang"),
                        ::es_fluent::registry::__macro::static_entry_id("en-US"),
                    ),
                    None,
                )
            }
            Self::Fr => {
                localize(
                    ::es_fluent::registry::__macro::static_message_key(
                        "es-fluent-lang",
                        ::es_fluent::registry::__macro::static_domain("es-fluent-lang"),
                        ::es_fluent::registry::__macro::static_entry_id("fr"),
                    ),
                    None,
                )
            }
        }
    }
}
impl From<Languages> for ::es_fluent::unic_langid::LanguageIdentifier {
    fn from(val: Languages) -> Self {
        match val {
            Languages::EnUs => ::es_fluent::unic_langid::langid!("en-US"),
            Languages::Fr => ::es_fluent::unic_langid::langid!("fr"),
        }
    }
}
impl From<&Languages> for ::es_fluent::unic_langid::LanguageIdentifier {
    fn from(val: &Languages) -> Self {
        match val {
            Languages::EnUs => ::es_fluent::unic_langid::langid!("en-US"),
            Languages::Fr => ::es_fluent::unic_langid::langid!("fr"),
        }
    }
}
#[derive(Debug)]
pub enum LanguagesLanguageConversionError {
    InvalidLanguageIdentifier {
        input: String,
        source: ::es_fluent::unic_langid::LanguageIdentifierError,
    },
    UnsupportedLanguageIdentifier(::es_fluent::unic_langid::LanguageIdentifier),
}
impl ::std::fmt::Display for LanguagesLanguageConversionError {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        match self {
            Self::InvalidLanguageIdentifier { input, source } => {
                write!(f, "invalid language identifier '{input}': {source}")
            }
            Self::UnsupportedLanguageIdentifier(lang) => {
                write!(f, "unsupported language identifier: {lang}")
            }
        }
    }
}
impl ::std::error::Error for LanguagesLanguageConversionError {
    fn source(&self) -> Option<&(dyn ::std::error::Error + 'static)> {
        match self {
            Self::InvalidLanguageIdentifier { source, .. } => Some(source),
            Self::UnsupportedLanguageIdentifier(_) => None,
        }
    }
}
impl ::std::convert::TryFrom<&::es_fluent::unic_langid::LanguageIdentifier>
for Languages {
    type Error = LanguagesLanguageConversionError;
    fn try_from(
        lang: &::es_fluent::unic_langid::LanguageIdentifier,
    ) -> Result<Self, Self::Error> {
        let lang_str = lang.to_string();
        match lang_str.as_str() {
            "en-US" => Ok(Languages::EnUs),
            "fr" => Ok(Languages::Fr),
            _ => {
                Err(
                    LanguagesLanguageConversionError::UnsupportedLanguageIdentifier(
                        lang.clone(),
                    ),
                )
            }
        }
    }
}
impl ::std::convert::TryFrom<::es_fluent::unic_langid::LanguageIdentifier>
for Languages {
    type Error = LanguagesLanguageConversionError;
    fn try_from(
        lang: ::es_fluent::unic_langid::LanguageIdentifier,
    ) -> Result<Self, Self::Error> {
        Self::try_from(&lang)
    }
}
impl ::std::str::FromStr for Languages {
    type Err = LanguagesLanguageConversionError;
    fn from_str(s: &str) -> Result<Self, Self::Err> {
        let lang = s
            .parse::<::es_fluent::unic_langid::LanguageIdentifier>()
            .map_err(|source| {
                LanguagesLanguageConversionError::InvalidLanguageIdentifier {
                    input: s.to_string(),
                    source,
                }
            })?;
        Self::try_from(&lang)
    }
}
impl Default for Languages {
    fn default() -> Self {
        Languages::EnUs
    }
}
