crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_rejects_duplicate_language_mode.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
expression: pretty_tokens(&duplicate_mode)
---
::core::compile_error! {
    "Attribute error in language container: duplicate key `mode` in language container\nnote: first `mode` key in #[es_fluent_language] appears earlier\nhelp: keep only one `mode` entry in #[es_fluent_language]"
}
