crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_rejects_enums_with_variants.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
expression: pretty_tokens(&enum_with_variants)
---
::core::compile_error! {
    "#[es_fluent_language] expects an enum without variants"
}
