crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_rejects_generic_enums.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
expression: normalized_tokens(&generic_enum)
---
:: core :: compile_error ! { "#[es_fluent_language] does not support generic enums" }
