crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_rejects_invalid_attribute_arguments.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
expression: pretty_tokens(&invalid_attr)
---
compile_error!(
    "Attribute error in language container: #[es_fluent_language(mode = ...)] is not accepted\nhelp: use #[es_fluent_language] for builtin mode or #[es_fluent_language(custom)] for custom mode"
);
