crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_rejects_invalid_language_mode.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
assertion_line: 621
expression: pretty_tokens(&invalid_mode)
---
compile_error!(
    "Attribute error in language container: #[es_fluent_language] mode must be \"builtin\" or \"custom\""
);
