crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_rejects_unsupported_languages_custom_mode.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
expression: normalized_tokens(&custom_output)
---
enum CustomUnsupported { # [fluent (key = "en-US")] EnUs , # [fluent (key = "zz")] Zz } impl From < CustomUnsupported > for es_fluent :: unic_langid :: LanguageIdentifier { fn from (val : CustomUnsupported) -> Self { match val { CustomUnsupported :: EnUs => es_fluent :: unic_langid :: langid ! ("en-US") , CustomUnsupported :: Zz => es_fluent :: unic_langid :: langid ! ("zz") , } } } impl From < & CustomUnsupported > for es_fluent :: unic_langid :: LanguageIdentifier { fn from (val : & CustomUnsupported) -> Self { match val { CustomUnsupported :: EnUs => es_fluent :: unic_langid :: langid ! ("en-US") , CustomUnsupported :: Zz => es_fluent :: unic_langid :: langid ! ("zz") , } } } # [derive (Debug)] pub enum CustomUnsupportedLanguageConversionError { InvalidLanguageIdentifier { input : String , source : es_fluent :: unic_langid :: LanguageIdentifierError , } , UnsupportedLanguageIdentifier (es_fluent :: unic_langid :: LanguageIdentifier) , } impl :: std :: fmt :: Display for CustomUnsupportedLanguageConversionError { fn fmt (& self , f : & mut :: std :: fmt :: Formatter < '_ >) -> :: std :: fmt :: Result { match self { Self :: InvalidLanguageIdentifier { input , source } => { write ! (f , "invalid language identifier '{input}': {source}") } Self :: UnsupportedLanguageIdentifier (lang) => { write ! (f , "unsupported language identifier: {lang}") } } } } impl :: std :: error :: Error for CustomUnsupportedLanguageConversionError { fn source (& self) -> Option < & (dyn :: std :: error :: Error + 'static) > { match self { Self :: InvalidLanguageIdentifier { source , .. } => Some (source) , Self :: UnsupportedLanguageIdentifier (_) => None , } } } impl :: std :: convert :: TryFrom < & es_fluent :: unic_langid :: LanguageIdentifier > for CustomUnsupported { type Error = CustomUnsupportedLanguageConversionError ; fn try_from (lang : & es_fluent :: unic_langid :: LanguageIdentifier) -> Result < Self , Self :: Error > { let lang_str = lang . to_string () ; match lang_str . as_str () { "en-US" => Ok (CustomUnsupported :: EnUs) , "zz" => Ok (CustomUnsupported :: Zz) , _ => Err (CustomUnsupportedLanguageConversionError :: UnsupportedLanguageIdentifier (lang . clone ())) , } } } impl :: std :: convert :: TryFrom < es_fluent :: unic_langid :: LanguageIdentifier > for CustomUnsupported { type Error = CustomUnsupportedLanguageConversionError ; fn try_from (lang : es_fluent :: unic_langid :: LanguageIdentifier) -> Result < Self , Self :: Error > { Self :: try_from (& lang) } } impl :: std :: str :: FromStr for CustomUnsupported { type Err = CustomUnsupportedLanguageConversionError ; fn from_str (s : & str) -> Result < Self , Self :: Err > { let lang = s . parse :: < es_fluent :: unic_langid :: LanguageIdentifier > () . map_err (| source | { CustomUnsupportedLanguageConversionError :: InvalidLanguageIdentifier { input : s . to_string () , source , } }) ? ; Self :: try_from (& lang) } } impl Default for CustomUnsupported { fn default () -> Self { CustomUnsupported :: EnUs } }
