crates/es-fluent-lang-macro/src/snapshots/es_fluent_lang_macro__tests__macro_rejects_unsupported_languages_default_mode.snap
---
source: crates/es-fluent-lang-macro/src/lib.rs
expression: normalized_tokens(&output)
---
:: core :: compile_error ! { "unsupported languages in assets: zz." }
